frontend improvements
