# api/swagger.yaml
@@ -384,6 +384,28 @@ paths:
         500:
           description: "Unexpected Error"
       x-swagger-router-controller: "Photo"
+  /content/{name_content}:
+    get:
+      tags:
+        - "content"
+      summary: "show specific content saved in pages db table."
+      operationId: "getContentByName"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "name_content"
+        in: "path"
+        description: "name of the requested content"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Content"
+        500:
+          description: "Unexpected Error"
+      x-swagger-router-controller: "Content"
   /user/{id_user}:
     get:
       tags:
@@ -585,8 +607,35 @@ definitions:
         content:
         - "content"
         - "content"
+        path: "/path/to/img.png"
       title: "title"
       type: "type"
+  Content:
+    type: "object"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+      title:
+        type: "string"
+      content:
+        type: "string"
+      photo:
+        $ref: "#/definitions/Photo"
+    example:
+      content: "content"
+      title: "title"
+      name: "name"
+      id: 8
+      primary_photo:
+        id: 6
+        content:
+        - "content"
+        - "content"
+        path: "/path/to/img.png"
+
   Seminar:
     type: "object"
     properties:
@@ -637,6 +686,7 @@ definitions:
         content:
         - "content"
         - "content"
+        path: "/path/to/img.png"
       type: "type"
   Photo:
     type: "object"
